demo/thumb_log2.txt
Add-Type failed: System.Exception: (48,16): error CS0012: The type 'IImage' is defined in an assembly that is not referenced. You must add a reference to assembly 'System.Private.Windows.Core, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089'.
        using (Image img = Image.FromHbitmap(hBmp))
               ^

